fonts into html

--- a/wp-content/themes/two_on_wp/sass/style.scss
+++ b/wp-content/themes/two_on_wp/sass/style.scss
@@ -1,11 +1,9 @@
+// imports
 @import "base";
+//@import url(http://fonts.googleapis.com/css?family=Lato:400,300,700);
+//@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+
 /* main stylesheet */
-
-/* google fonts */
-@import url(http://fonts.googleapis.com/css?family=Lato:400,300,700);
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
-
-/* box-sizing: border-box; & clearfix in bootstrap.css */
 
 /* general */
 body {
