--- a/wp-content/themes/two_on_wp/sass/style.scss
+++ b/wp-content/themes/two_on_wp/sass/style.scss
@@ -141,7 +141,7 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
     position: relative;
     width: 100%;
     height: 730px;
-    z-index: -10;
+    z-index: 10;
     //background: $light-gray url(img/banner.jpg) no-repeat center;
     background: $light-gray url(img/banner.jpg) no-repeat 50% top;
     background-position: 50% 50%;
@@ -167,6 +167,7 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
 
     .banner-caption {
         position: absolute;
+        z-index: 15;
         bottom: 64px;
 
         >p {
@@ -193,7 +194,7 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
         position: absolute;
         bottom: -97px;
         right: 603px + 15px;
-        z-index: -1;
+        z-index: 15;
         display: block;
     }
 
@@ -201,7 +202,7 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
         position: absolute;
         bottom: -67px;
         right: 0px;
-        z-index: -2;
+        z-index: 14;
         display: block;
     }
 }
@@ -222,13 +223,14 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
     &:hover {
         color: $dark-blue;
         text-decoration: none;
+        cursor: pointer;
     }
 }
 
 /* main sections */
 .section {
     position: relative;
-    z-index: 0;
+    z-index: 20;
     padding: 100px 0;
     background-color: #fff;
 }
@@ -363,6 +365,29 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
     }
 }
 
+/* page */
+article {
+    font-size: 16px;
+    text-align: justify;
+}
+
+.entry-title {
+    margin-bottom: 20px;
+}
+
+article.page {
+    margin-bottom: 30px;
+}
+
+#reply-title,
+.form-allowed-tags {
+    margin-bottom: 12px;
+}
+
+.form-submit {
+    text-align: center;
+}
+
 /* cake chart - progress-ring */
 /*
     1% = 3.6deg
@@ -446,7 +471,6 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
         margin-bottom: 54px;
     }
 }
-
 
 .clients-info {
     color: #fff;
@@ -536,7 +560,6 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
     }
 }
 
-
 #contact-form {
     @include border-radius(5px);
     background-color: $lighter-gray;
@@ -578,37 +601,41 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
         }
     }
 
-    input[type=text],
-    textarea {
+}
+
+input[type=text],
+textarea {
+    outline: none;
+    @include border-radius(5px);
+    border: 1px solid $input-gray;
+    padding: 8px 13px;
+    font-size: 14px;
+    line-height: 1;
+    width: 100%;
+
+    &:hover {
         outline: none;
-        @include border-radius(5px);
-        border: 1px solid $input-gray;
-        padding: 8px 13px;
-        font-size: 14px;
-        line-height: 1;
-        width: 100%;
-
-        &:hover {
-            outline: none;
-        }
     }
 
-    textarea {
-        height: 105px;
-        resize: none;
+    &:focus {
+        border-color: #CFCFCF;
     }
+}
 
-    input[type=submit] {
-        @include border-radius(5px);
-        border: none;
-        font-size: 16px;
-        font-weight: 700;
-        text-transform: uppercase;
-        background-color: $darker-blue;
-        color: #fff;
-        padding: 7px 17px;
-    }
+textarea {
+    height: 105px;
+    resize: none;
+}
 
+input[type=submit] {
+    @include border-radius(5px);
+    border: none;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: $darker-blue;
+    color: #fff;
+    padding: 7px 17px;
 }
 
 /* footer */
