--- a/wp-content/themes/two_on_wp/style.css
+++ b/wp-content/themes/two_on_wp/style.css
@@ -372,6 +372,11 @@ article.page {
   text-align: center;
 }
 
+#comments-list li {
+  float: none;
+  margin-bottom: 10px;
+}
+
 /* cake chart - progress-ring */
 /*
     1% = 3.6deg
