--- a/wp-content/themes/two_on_wp/sass/style.scss
+++ b/wp-content/themes/two_on_wp/sass/style.scss
@@ -388,6 +388,13 @@ article.page {
     text-align: center;
 }
 
+#comments-list {
+    li {
+        float: none;
+        margin-bottom: 10px;
+    }
+}
+
 /* cake chart - progress-ring */
 /*
     1% = 3.6deg
