--- a/wp-content/themes/two_on_wp/sass/style.scss
+++ b/wp-content/themes/two_on_wp/sass/style.scss
@@ -227,6 +227,10 @@ $sticky-h-margin: 26px - (80px - $sticky-height )/2;
     }
 }
 
+.btn-more span.plw {
+  font-size: 15px;
+}
+
 /* main sections */
 .section {
     position: relative;
